personlige oplysninger komponent

--- a/intelligentjobportal/src/index.css
+++ b/intelligentjobportal/src/index.css
@@ -23,11 +23,13 @@ a:hover {
 }
 
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+    margin: 0;
+    display: flex;
+    justify-content: center; /* horisontal centering */
+    align-items: center; /* vertikal centering */
+    min-width: 320px;
+    min-height: 100vh;
+    background-color: #646cff;  /*blålig farve som minder om .dotlegal*/
 }
 
 h1 {
