--- a/intelligentjobportal/src/App.css
+++ b/intelligentjobportal/src/App.css
@@ -40,3 +40,16 @@
 .read-the-docs {
   color: #888;
 }
+
+.nav-link {
+    padding: 10px 15px;
+    border: 1px solid black;
+    color: black;
+    text-decoration: none;
+    border-radius: 6px;
+    transition: background-color 0.2s;
+}
+
+    .nav-link:hover {
+        background-color: rgba(0, 0, 0, 0.05);
+    }
