--- a/intelligentjobportal/src/App.css
+++ b/intelligentjobportal/src/App.css
@@ -48,8 +48,22 @@
     text-decoration: none;
     border-radius: 6px;
     transition: background-color 0.2s;
+    display: inline-block;
 }
 
     .nav-link:hover {
         background-color: rgba(0, 0, 0, 0.05);
+    }
+
+.app-logo {
+    position: absolute;
+    top: 20;
+    right: 0;
+    width: 100px;
+    height: auto;
+    opacity: 0.7;
+}
+
+    .app-logo:hover {
+        opacity: 1;
     }
